@@ -12,6 +12,7 @@ xine-lib (1.1.9) (unreleased)
   * Build fix for when using Linux 2.6.23 headers. [Bug 1820958]
   * Implemented decoding of XML character entities with codes >= 256.
     This requires conversion to UTF-8 of entities with codes >= 128.
+  * Handle initial Unicde BOMs in XML; convert other UTF encodings to UTF-8.
   * Fixed ATSC support. [Bug 1749508]
   * Fixed a possible DVB plugin crash when switching channels.
   * Fixed a crash closing the frontend. [Bug FS#3]
